force-app/main/default/objects/ER_Acceptor__c/ER_Acceptor__c.object-meta.xml
<CustomObject>
    <label>Acceptor</label>
    <nameField>
        <label>Acceptor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acceptors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>