force-app/main/default/objects/ER_Acceptor__c/fields/AT_Acceptor_Status__c.field-meta.xml
<CustomField>
    <fullName>AT_Acceptor_Status__c</fullName>
    <label>Acceptor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>