force-app/main/default/objects/ER_Acceptor__c/fields/AT_External_ID__c.field-meta.xml
<CustomField>
    <fullName>AT_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>