force-app/main/default/objects/ER_Acceptor__c/fields/ER_MID_Authorization__c.field-meta.xml
<CustomField>
    <fullName>ER_MID_Authorization__c</fullName>
    <label>MID Authorization</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>