force-app/main/default/objects/ER_Acceptor__c/fields/ER_MID_Clearing__c.field-meta.xml
<CustomField>
    <fullName>ER_MID_Clearing__c</fullName>
    <label>MID Clearing</label>
    <length>40</length>
    <type>Text</type>
</CustomField>