force-app/main/default/objects/ER_Acceptor__c/fields/ER_Store__c.field-meta.xml
<CustomField>
    <fullName>ER_Store__c</fullName>
    <label>Store</label>
    <referenceTo>ER_Store__c</referenceTo>
    <relationshipLabel>Acceptors</relationshipLabel>
    <relationshipName>Acceptors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>