force-app/main/default/objects/ER_Acceptor__c/fields/ER_Sub_MID_Authorization__c.field-meta.xml
<CustomField>
    <fullName>ER_Sub_MID_Authorization__c</fullName>
    <label>Sub-MID Authorization</label>
    <length>20</length>
    <type>Text</type>
</CustomField>