force-app/main/default/objects/ER_Acceptor__c/fields/ER_Sub_MID_Clearing__c.field-meta.xml
<CustomField>
    <fullName>ER_Sub_MID_Clearing__c</fullName>
    <label>Sub-MID Clearing</label>
    <length>20</length>
    <type>Text</type>
</CustomField>