force-app/main/default/objects/ER_Acceptor__c/fields/ER_TID_Authorization__c.field-meta.xml
<CustomField>
    <fullName>ER_TID_Authorization__c</fullName>
    <label>TID Authorization</label>
    <length>40</length>
    <type>Text</type>
</CustomField>