force-app/main/default/objects/ER_Acceptor__c/fields/ERAT_MIDSubMIDAutothorization__c.field-meta.xml
<CustomField>
    <fullName>ERAT_MIDSubMIDAutothorization__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>MID+Sub-MID Authorization</label>
    <length>41</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>