force-app/main/default/objects/ER_Acceptor__c/recordTypes/ER_Merchant_Acceptor_RT.recordType-meta.xml
<RecordType>
    <fullName>ER_Merchant_Acceptor_RT</fullName>
    <active>true</active>
    <label>Merchant Acceptor</label>
</RecordType>