force-app/main/default/objects/ER_Acceptor__c/validationRules/No_Special_Characters_or_Space_Except.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Special_Characters_or_Space_Except</fullName>
    <active>true</active>
    <description>No Special Characters or Space Except _ underscore</description>
    <errorConditionFormula>NOT(REGEX( ER_MID_Authorization__c , &quot;[a-zA-Z0-9_]+&quot;))</errorConditionFormula>
    <errorDisplayField>ER_MID_Authorization__c</errorDisplayField>
    <errorMessage>No special character or space allowed</errorMessage>
</ValidationRule>