force-app/main/default/objects/ER_Acceptor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ER_Store__c</columns>
    <columns>NAME</columns>
    <columns>AT_Acceptor_Status__c</columns>
    <columns>ER_MID_Authorization__c</columns>
    <columns>AT_External_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AT_External_ID__c</field>
        <operation>startsWith</operation>
        <value>20003.</value>
    </filters>
    <label>All</label>
</ListView>