force-app/main/default/objects/ER_Acceptor__c/listViews/InactiveAcceptors.listView-meta.xml
<ListView>
    <fullName>InactiveAcceptors</fullName>
    <columns>ER_Store__c</columns>
    <columns>NAME</columns>
    <columns>AT_Acceptor_Status__c</columns>
    <columns>ER_MID_Authorization__c</columns>
    <columns>AT_External_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AT_Acceptor_Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Inactive Acceptors</label>
</ListView>